syntax = "proto3";

option csharp_namespace = "MediaUpload";

service MediaUpload {
  rpc UploadMedia (stream VideoChunk) returns (UploadStatus);
}

message VideoChunk {
  string fileName = 1;
  bytes data = 2;
  uint32 totalChunks = 3;
}

message UploadStatus {
  bool success = 1;
  string message = 2;
}